[package]
name = "kscrpr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
clap = { version = "3.1.8", features = ["derive", "env"] }
clap_complete_command = "0.3.0"
color-eyre = "0.6.1"
ctrlc = "3.2.1"
dialoguer = { version = "0.10.0", features = ["fuzzy-select"] }
dirs = "4.0.0"
image = "0.24.1"
indicatif = { features = ["improved_unicode"], git = "https://github.com/console-rs/indicatif" }
itertools = "0.10.3"
jpeg-to-pdf = "0.2.3"
mozjpeg = { version = "0.9.2", features = ["with_simd"] }
once_cell = "1.10.0"
opener = "0.5.0"
rayon = "1.5.1"
reqwest = { version = "0.11.10", features = ["stream"] }
scraper = "0.12.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_cbor = "0.11.2"
sled = { version = "0.34.7", features = ["io_uring"] }
symlink = "0.1.0"
tantivy = { version = "0.17.0", features = ["quickwit"] }
tokio = { version = "1.17.0", features = ["rt", "macros"] }
tracing = { version = "0.1.33", features = ["async-await"] }
tracing-appender = "0.2.2"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
url = { version = "2.2.2", features = ["serde"] }
walkdir = "2.3.2"
zip = "0.6.2"
