[package]
name = "kscrpr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
clap = { version = "3.2.5", features = ["derive", "env"] }
clap_complete_command = "0.3.4"
color-eyre = "0.6.1"
crossterm = "0.23.2"
ctrlc = "3.2.2"
dirs = "4.0.0"
indicatif = { features = ["improved_unicode"], git = "https://github.com/console-rs/indicatif" }
itertools = "0.10.3"
once_cell = "1.12.0"
opener = "0.5.0"
printpdf = { version = "0.5.2", features = ["embedded_images"] }
reqwest = { version = "0.11.11", features = ["stream", "json"] }
scraper = "0.13.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_cbor = "0.11.2"
sled = { version = "0.34.7", features = ["io_uring"] }
symlink = "0.1.0"
tantivy = { version = "0.18.0", features = ["quickwit"] }
tokio = { version = "1.19.2", features = ["rt", "macros"] }
tracing = { version = "0.1.35", features = ["async-await"] }
tracing-appender = "0.2.2"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tui = "0.18.0"
url = { version = "2.2.2", features = ["serde"] }
walkdir = "2.3.2"
zip = "0.6.2"
